[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ina233"
version = "0.1.0"
description = "This library supports the TI INA233 current and power monitor using SMBus/I2C"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Scott VR", email = "scottvr@gmail.com" }
]
dependencies = [
    "smbus2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Topic :: System :: Hardware :: Hardware Drivers',
    'Topic :: System :: Monitoring',
]

[project.urls]
Homepage = "https://github.com/scottvr/pi-ina233"
Repository = "https://github.com/scottvr/pi-ina233.git"
Issues = "https://github.com/scottvr/pi-ina233/issues"
[tool.hatch.build.targets.wheel]
packages = ["src/ina233"]
